k8s/apps/fitness/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fitness
  labels:
    app.kubernetes.io/name: fitnessphive
    app.kubernetes.io/part-of: fitness
